--- a/Lab2/Calculators.ipynb
+++ b/Lab2/Calculators.ipynb
@@ -8,7 +8,20 @@
     }
    },
    "source": [
-    "# Calculators\n",
+    "# Calculators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -27,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T06:08:29.671724Z",
-     "start_time": "2020-09-19T06:08:29.254016Z"
+     "end_time": "2020-09-21T10:57:51.380447Z",
+     "start_time": "2020-09-21T10:57:51.299834Z"
     },
     "hide_input": false,
     "init_cell": true,
@@ -45,7 +58,6 @@
     "from ipywidgets import interact\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import sys, io\n",
     "import math\n",
     "from math import log, exp, sin, cos, tan, pi"
    ]
@@ -93,7 +105,7 @@
     "1. $\\left\\lceil\\frac32\\right\\rceil$ by entering `3//2`;\n",
     "1. $3\\mod 2$ by entering `3%2`;\n",
     "1. $\\sqrt{2}$ by entering `2**0.5`; and\n",
-    "1. $sin(\\pi/6)$ by entering `sin(pi/6)`;"
+    "1. $\\sin(\\pi/6)$ by entering `sin(pi/6)`;"
    ]
   },
   {
@@ -223,7 +235,7 @@
    "source": [
     "def length_of_hypotenuse(a, b):\n",
     "    # YOUR CODE HERE\n",
-    "    c = 1\n",
+    "    raise NotImplementedError()\n",
     "    return c"
    ]
   },
@@ -393,7 +405,10 @@
    },
    "source": [
     "In mathematics, the collection of points $(x,y)$ satisfying the following equation forms a *parabola*:\n",
-    "$$y=ax^2+bx+c$$\n",
+    "\n",
+    "$$\n",
+    "y=ax^2+bx+c\n",
+    "$$\n",
     "where $a$, $b$, and $c$ are real numbers called the *coefficients*."
    ]
   },
@@ -435,7 +450,7 @@
    "source": [
     "def get_y(x, a, b, c):\n",
     "    # YOUR CODE HERE\n",
-    "    y=1\n",
+    "    raise NotImplementedError()\n",
     "    return y"
    ]
   },
@@ -490,9 +505,7 @@
      "end_time": "2020-09-09T02:45:58.652577Z",
      "start_time": "2020-09-09T02:45:58.096175Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -546,9 +559,15 @@
    },
    "source": [
     "For the quadratic equation\n",
-    "$$ax^2+bx+c=0,$$\n",
+    "\n",
+    "$$\n",
+    "ax^2+bx+c=0,\n",
+    "$$\n",
     "the *roots* (solutions for $x$) are give by\n",
-    "$$\\frac{-b-\\sqrt{b^2-4ac}}{2a},\\frac{-b+\\sqrt{b^2-4ac}}{2a}.$$"
+    "\n",
+    "$$\n",
+    "\\frac{-b-\\sqrt{b^2-4ac}}{2a},\\frac{-b+\\sqrt{b^2-4ac}}{2a}.\n",
+    "$$"
    ]
   },
   {
@@ -601,14 +620,12 @@
      "end_time": "2020-09-09T02:46:31.376421Z",
      "start_time": "2020-09-09T02:46:31.366491Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "686a7ab81b45f3cdc5665827a60509b6",
+     "checksum": "6c4b5df11d68aac1425187107b9a4788",
      "grade": true,
      "grade_id": "test-get_roots",
      "locked": true,
@@ -628,7 +645,7 @@
     "    roots_ = get_roots(a, b, c)\n",
     "    correct = all([math.isclose(roots[i], roots_[i]) for i in range(2)])\n",
     "    if not correct:\n",
-    "        print(f'With (a, b, c)={a,b,c}, roots should be {roots} not {root_}.')\n",
+    "        print(f'With (a, b, c)={a,b,c}, roots should be {roots} not {roots_}.')\n",
     "    assert correct\n",
     "\n",
     "\n",
@@ -702,7 +719,10 @@
    },
    "source": [
     "Denote a binary number stored as a byte ($8$-bit) as\n",
-    "$$ b_7\\circ b_6\\circ b_5\\circ b_4\\circ b_3\\circ b_2\\circ b_1\\circ b_0, $$\n",
+    "\n",
+    "$$ \n",
+    "b_7\\circ b_6\\circ b_5\\circ b_4\\circ b_3\\circ b_2\\circ b_1\\circ b_0, \n",
+    "$$\n",
     "where $\\circ$ concatenates $b_i$'s together into a binary string."
    ]
   },
@@ -715,7 +735,10 @@
    },
    "source": [
     "The binary string can be converted to a decimal number by the formula\n",
-    "$$ b_7\\cdot 2^7 + b_6\\cdot 2^6 + b_5\\cdot 2^5 + b_4\\cdot 2^4 + b_3\\cdot 2^3 + b_2\\cdot 2^2 + b_1\\cdot 2^1 + b_0\\cdot 2^0. $$"
+    "\n",
+    "$$ \n",
+    "b_7\\cdot 2^7 + b_6\\cdot 2^6 + b_5\\cdot 2^5 + b_4\\cdot 2^4 + b_3\\cdot 2^3 + b_2\\cdot 2^2 + b_1\\cdot 2^1 + b_0\\cdot 2^0. \n",
+    "$$"
    ]
   },
   {
@@ -727,7 +750,10 @@
    },
    "source": [
     "E.g., the binary string `'11111111'` is the largest integer represented by a byte:\n",
-    "$$2^7+2^6+2^5+2^4+2^3+2^2+2^1+2^0=255=2^8-1.$$"
+    "\n",
+    "$$\n",
+    "2^7+2^6+2^5+2^4+2^3+2^2+2^1+2^0=255=2^8-1.\n",
+    "$$"
    ]
   },
   {
@@ -768,7 +794,8 @@
    "outputs": [],
    "source": [
     "def byte_to_decimal(b7, b6, b5, b4, b3, b2, b1, b0):\n",
-    "    decimal = 1\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
     "    return decimal"
    ]
   },
@@ -901,7 +928,8 @@
    "outputs": [],
    "source": [
     "def decimal_to_byte(decimal):\n",
-    "    byte = '1'\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
     "    return byte"
    ]
   },
@@ -991,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
