--- a/Lab3b/Big Number Conversion.ipynb
+++ b/Lab3b/Big Number Conversion.ipynb
@@ -8,7 +8,20 @@
     }
    },
    "source": [
-    "# Big Number Conversion\n",
+    "# Big Number Conversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -71,9 +84,15 @@
    },
    "source": [
     "Given a binary string of an arbitrarily length $k$,\n",
-    "$$ b_{k-1}\\circ \\dots \\circ b_1\\circ b_0, $$\n",
+    "\n",
+    "$$ \n",
+    "b_{k-1}\\circ \\dots \\circ b_1\\circ b_0,\n",
+    "$$\n",
     "the decimal number can be computed by the formula\n",
-    "$$2^0 \\cdot b_0 + 2^1 \\cdot b_1 + \\dots + 2^{k-1} \\cdot b_{k-1}.$$"
+    "\n",
+    "$$\n",
+    "2^0 \\cdot b_0 + 2^1 \\cdot b_1 + \\dots + 2^{k-1} \\cdot b_{k-1}.\n",
+    "$$"
    ]
   },
   {
@@ -85,7 +104,10 @@
    },
    "source": [
     "In mathematics, we use the summation notation to write the above formula:\n",
-    "$$ \\sum_{i=0}^{k-1} 2^i \\cdot b_{i} $$"
+    "\n",
+    "$$ \n",
+    "\\sum_{i=0}^{k-1} 2^i \\cdot b_{i}.\n",
+    "$$"
    ]
   },
   {
@@ -118,7 +140,8 @@
     "    decimal = 0                                     # initialization\n",
     "    for i in range(k):\n",
     "        decimal += 2**i * int(binary_str[(k-1)-i])  # iteration\n",
-    "    return decimal```"
+    "    return decimal\n",
+    "```"
    ]
   },
   {
@@ -130,7 +153,10 @@
    },
    "source": [
     "Note that $b_i$ is given by `binary_str[(k-1)-i]`:\n",
-    "$$\\begin{array}{c|c:c:c:c|}\\texttt{binary_str} & b_{k-1} & b_{k-2} & \\dots &1\\\\ \\text{indexing} & [0] & [1] & \\dots & [k-1] \\end{array}$$"
+    "\n",
+    "$$\n",
+    "\\begin{array}{c|c:c:c:c|}\\texttt{binary_str} & b_{k-1} & b_{k-2} & \\dots & b_0\\\\ \\text{indexing} & [0] & [1] & \\dots & [k-1] \\end{array}\n",
+    "$$"
    ]
   },
   {
@@ -157,7 +183,8 @@
     "    decimal = 0                                # initialization\n",
     "    for bit in binary_str:\n",
     "        decimal = decimal * 2 + int(bit)       # iteration\n",
-    "    return decimal```"
+    "    return decimal\n",
+    "```"
    ]
   },
   {
@@ -169,11 +196,14 @@
    },
    "source": [
     "The algorithm implements the same formula factorized as follows:\n",
-    "$$\\begin{aligned} \\sum_{i=0}^{k-1} 2^i \\cdot b_{i} \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned} \\sum_{i=0}^{k-1} 2^i \\cdot b_{i} \n",
     "&=  \\left(\\sum_{i=1}^{k-1} 2^i \\cdot b_{i}\\right) + b_0\\\\\n",
     "&=  \\left(\\sum_{i=1}^{k-1} 2^{i-1} \\cdot b_{i}\\right)\\times 2 + b_0 \\\\\n",
-    "&=  \\left(\\sum_{j=0}^{k-2} 2^{j-2} \\cdot b_{j-1}\\right)\\times 2 + b_0 && \\text{with $j=i-1$} \\\\\n",
-    "&= \\underbrace{(\\dots (\\underbrace{(\\underbrace{\\overbrace{0}^{\\text{initialization}\\kern-2em}\\times 2 + b_{k-1}}_{\\text{first iteration} }) \\times 2 + b_{k-2}}_{\\text{second iteration} }) \\dots )\\times 2 + b_0}_{\\text{last iteration} }.\\end{aligned}$$ "
+    "&=  \\left(\\sum_{j=0}^{k-2} 2^{j} \\cdot b_{j+1}\\right)\\times 2 + b_0 && \\text{with $j=i-1$} \\\\\n",
+    "&= \\underbrace{(\\dots (\\underbrace{(\\underbrace{\\overbrace{0}^{\\text{initialization}\\kern-2em}\\times 2 + b_{k-1}}_{\\text{first iteration} }) \\times 2 + b_{k-2}}_{\\text{second iteration} }) \\dots )\\times 2 + b_0}_{\\text{last iteration} }.\\end{aligned}\n",
+    "$$ "
    ]
   },
   {
@@ -314,7 +344,10 @@
    },
    "source": [
     "A base-11 number system is called an [undecimal system](https://en.wikipedia.org/wiki/Undecimal). The digits range from 0 to 10 with 10 denoted as X:\n",
-    "$$0, 1, 2, 3, 4, 5, 6, 7, 8, 9, X.$$\n",
+    "\n",
+    "$$\n",
+    "0, 1, 2, 3, 4, 5, 6, 7, 8, 9, X.\n",
+    "$$\n",
     "\n",
     "The [International Standard Book Number (ISBN)](https://en.wikipedia.org/wiki/International_Standard_Book_Number) uses an undecimal digit."
    ]
@@ -379,12 +412,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-21T03:21:10.299595Z",
-     "start_time": "2020-09-21T03:21:10.286867Z"
+     "end_time": "2020-09-23T13:52:17.036550Z",
+     "start_time": "2020-09-23T13:52:16.963923Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -510,7 +541,8 @@
     "    while decimal // 2:\n",
     "        decimal //= 2\n",
     "        binary_str = str(decimal % 2) + binary_str\n",
-    "    return binary_str```"
+    "    return binary_str\n",
+    "```"
    ]
   },
   {
@@ -522,8 +554,11 @@
    },
    "source": [
     "To understand the while loop, consider the same formula before, where the braces indicate the value of `decimal` at different times:\n",
-    "$$\\begin{aligned} \\sum_{i=0}^{k-1} 2^i \\cdot b_{i} &=  \\left(\\sum_{i=0}^{k-2} 2^{i-2} \\cdot b_{i-1}\\right)\\times 2 + b_0 \\\\\n",
-    "&= \\underbrace{(\\underbrace{ \\dots (\\underbrace{(0\\times 2 + b_{k-1}) \\times 2 + b_{k-2}}_{\\text{right before the last iteration} }  )\\times 2 \\dots + b_1}_{\\text{right before the second iteration} })\\times 2 + b_0}_{\\text{right before the first iteration} }.\\end{aligned}$$ "
+    "\n",
+    "$$\n",
+    "\\begin{aligned} \\sum_{i=0}^{k-1} 2^i \\cdot b_{i} &=  \\left(\\sum_{i=0}^{k-2} 2^{i-2} \\cdot b_{i-1}\\right)\\times 2 + b_0 \\\\\n",
+    "&= \\underbrace{(\\underbrace{ \\dots (\\underbrace{(0\\times 2 + b_{k-1}) \\times 2 + b_{k-2}}_{\\text{right before the last iteration} }  )\\times 2 \\dots + b_1}_{\\text{right before the second iteration} })\\times 2 + b_0}_{\\text{right before the first iteration} }.\\end{aligned}\n",
+    "$$ "
    ]
   },
   {
