--- a/Lab7/Cybersecurity.ipynb
+++ b/Lab7/Cybersecurity.ipynb
@@ -8,7 +8,20 @@
     }
    },
    "source": [
-    "# Cybersecurity\n",
+    "# Cybersecurity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -50,30 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:55:17.429753Z",
-     "start_time": "2020-11-09T04:55:17.423043Z"
+     "end_time": "2020-11-09T04:49:05.347986Z",
+     "start_time": "2020-11-09T04:49:05.333249Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/sMOZf4GN3oc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/sMOZf4GN3oc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
@@ -117,8 +117,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:05.851633Z",
-     "start_time": "2020-11-09T04:49:05.843866Z"
+     "end_time": "2020-11-17T03:08:20.638346Z",
+     "start_time": "2020-11-17T03:08:20.634560Z"
     },
     "code_folding": [],
     "slideshow": {
@@ -161,8 +161,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:05.938296Z",
-     "start_time": "2020-11-09T04:49:05.931222Z"
+     "end_time": "2020-11-17T03:08:23.886021Z",
+     "start_time": "2020-11-17T03:08:23.875412Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -211,8 +211,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:06.148754Z",
-     "start_time": "2020-11-09T04:49:06.138199Z"
+     "end_time": "2020-11-17T03:08:26.346900Z",
+     "start_time": "2020-11-17T03:08:26.339271Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -244,6 +244,7 @@
    },
    "source": [
     "Mathematically, we define the encryption and decryption of a character for Caesar cipher as\n",
+    "\n",
     "$$ \\begin{aligned} E(x,k) &:= x + k \\mod n & \\text{(encryption)} \\\\\n",
     "D(x,k) &:= x - k \\mod n & \\text{(decryption),} \\end{aligned}\n",
     "$$\n",
@@ -259,6 +260,7 @@
    },
    "source": [
     "The encryption and decryption satisfies the recoverability condition\n",
+    "\n",
     "$$ D(E(x,k),k) = x $$\n",
     "so two people with a common secret key can encrypt and decrypt a character, but others not knowing the key cannot. This is a defining property of a [symmetric cipher](https://en.wikipedia.org/wiki/Symmetric-key_algorithm).  "
    ]
@@ -279,8 +281,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:06.467913Z",
-     "start_time": "2020-11-09T04:49:06.461406Z"
+     "end_time": "2020-11-17T03:08:29.865342Z",
+     "start_time": "2020-11-17T03:08:29.859315Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -319,8 +321,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:06.540599Z",
-     "start_time": "2020-11-09T04:49:06.533135Z"
+     "end_time": "2020-11-17T03:08:32.041347Z",
+     "start_time": "2020-11-17T03:08:32.035063Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -411,8 +413,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:06.914928Z",
-     "start_time": "2020-11-09T04:49:06.908781Z"
+     "end_time": "2020-11-17T03:08:34.917549Z",
+     "start_time": "2020-11-17T03:08:34.914069Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -462,8 +464,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:07.109528Z",
-     "start_time": "2020-11-09T04:49:07.103739Z"
+     "end_time": "2020-11-17T03:08:37.286329Z",
+     "start_time": "2020-11-17T03:08:37.282400Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -500,12 +502,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:07.123365Z",
-     "start_time": "2020-11-09T04:49:07.112107Z"
+     "end_time": "2020-11-17T03:08:42.313379Z",
+     "start_time": "2020-11-17T03:08:42.307611Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -579,8 +579,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.206272Z",
-     "start_time": "2020-11-09T04:49:07.437113Z"
+     "end_time": "2020-11-17T03:08:46.906664Z",
+     "start_time": "2020-11-17T03:08:46.235389Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -609,8 +609,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.571221Z",
-     "start_time": "2020-11-09T04:49:08.210010Z"
+     "end_time": "2020-11-17T03:08:49.796413Z",
+     "start_time": "2020-11-17T03:08:49.523596Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -651,8 +651,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.709310Z",
-     "start_time": "2020-11-09T04:49:08.574329Z"
+     "end_time": "2020-11-17T03:08:53.279779Z",
+     "start_time": "2020-11-17T03:08:53.011557Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -680,12 +680,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.717188Z",
-     "start_time": "2020-11-09T04:49:08.712622Z"
+     "end_time": "2020-11-17T03:08:55.290548Z",
+     "start_time": "2020-11-17T03:08:55.283215Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -735,6 +733,7 @@
    },
    "source": [
     "To determine how English-like a text is, we calculate the following score:\n",
+    "\n",
     "$$\n",
     "\\frac{\\text{number of English words in the text}}{\\text{number of tokens in the text}} \n",
     "$$\n",
@@ -746,8 +745,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.762724Z",
-     "start_time": "2020-11-09T04:49:08.720489Z"
+     "end_time": "2020-11-17T03:09:04.979585Z",
+     "start_time": "2020-11-17T03:09:04.947293Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -817,8 +816,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.771679Z",
-     "start_time": "2020-11-09T04:49:08.765297Z"
+     "end_time": "2020-11-17T03:09:09.393746Z",
+     "start_time": "2020-11-17T03:09:09.387569Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -852,12 +851,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.785210Z",
-     "start_time": "2020-11-09T04:49:08.774009Z"
+     "end_time": "2020-11-17T03:09:12.148792Z",
+     "start_time": "2020-11-17T03:09:12.139611Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -917,8 +914,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.795134Z",
-     "start_time": "2020-11-09T04:49:08.789111Z"
+     "end_time": "2020-11-17T03:09:28.289722Z",
+     "start_time": "2020-11-17T03:09:28.283197Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -950,12 +947,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.899492Z",
-     "start_time": "2020-11-09T04:49:08.798626Z"
+     "end_time": "2020-11-17T03:09:34.144056Z",
+     "start_time": "2020-11-17T03:09:34.059676Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1038,12 +1033,8 @@
     "    '''A helper function that returns the tuple of indices that would permute \n",
     "    the letters of a message according to the key using the irregular case of \n",
     "    columnar transposition cipher.'''\n",
-    "    last_row_size = length % len(key)\n",
-    "    num_rows = length // len(key) + (1 if last_row_size else 0)\n",
     "    seq = tuple(range(length))\n",
-    "    matrix = ____________________________________________________________________\n",
-    "    return tuple(matrix[i][j] for j in argsort(key)\n",
-    "                 for i in range(num_rows - (1 if j >= last_row_size else 0)))\n",
+    "    return [i for j in argsort(key) for i in _______________]\n",
     "\n",
     "\n",
     "def ct_encrypt(plaintext, key):\n",
@@ -1078,8 +1069,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.911252Z",
-     "start_time": "2020-11-09T04:49:08.902297Z"
+     "end_time": "2020-11-24T04:05:49.137601Z",
+     "start_time": "2020-11-24T04:05:49.118597Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -1107,8 +1098,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-09T04:49:08.921470Z",
-     "start_time": "2020-11-09T04:49:08.913769Z"
+     "end_time": "2020-11-24T04:03:39.288318Z",
+     "start_time": "2020-11-24T04:03:39.284254Z"
     },
     "deletable": false,
     "editable": false,
