--- a/Lab9/Monte Carlo and Root Finding.ipynb
+++ b/Lab9/Monte Carlo and Root Finding.ipynb
@@ -8,7 +8,20 @@
     }
    },
    "source": [
-    "# Monte Carlo and Root Finding\n",
+    "# Monte Carlo and Root Finding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -80,8 +93,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:05.825482Z",
-     "start_time": "2020-11-22T12:56:05.806418Z"
+     "end_time": "2020-11-25T01:18:17.025730Z",
+     "start_time": "2020-11-25T01:18:17.010341Z"
     },
     "code_folding": [],
     "slideshow": {
@@ -149,8 +162,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:14.398745Z",
-     "start_time": "2020-11-22T12:56:05.827182Z"
+     "end_time": "2020-11-25T01:23:30.120232Z",
+     "start_time": "2020-11-25T01:23:24.086494Z"
     },
     "slideshow": {
      "slide_type": "subslide"
@@ -190,8 +203,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:15.777048Z",
-     "start_time": "2020-11-22T12:56:14.402472Z"
+     "end_time": "2020-11-25T01:21:37.279303Z",
+     "start_time": "2020-11-25T01:21:36.020494Z"
     },
     "deletable": false,
     "editable": false,
@@ -252,8 +265,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:16.044904Z",
-     "start_time": "2020-11-22T12:56:15.779472Z"
+     "end_time": "2020-11-25T01:26:50.855625Z",
+     "start_time": "2020-11-25T01:26:50.596688Z"
     },
     "code_folding": []
    },
@@ -265,7 +278,7 @@
     "    the initial pick using the Monte Carlo simulation of door_with_treasure \n",
     "    and initial_pick.'''\n",
     "    count_of_win = 0\n",
-    "    for x, y in zip(door_with_treasure[:n], initial_pick[:n]):\n",
+    "    for x, y in zip(door_with_treasure, initial_pick):\n",
     "        if x == y: count_of_win += 1\n",
     "    return count_of_win / n\n",
     "\n",
@@ -298,8 +311,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:16.179674Z",
-     "start_time": "2020-11-22T12:56:16.046726Z"
+     "end_time": "2020-11-25T01:27:11.675265Z",
+     "start_time": "2020-11-25T01:27:11.529691Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -335,8 +348,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-22T12:56:16.186779Z",
-     "start_time": "2020-11-22T12:56:16.181445Z"
+     "end_time": "2020-11-25T01:27:50.981923Z",
+     "start_time": "2020-11-25T01:27:50.976334Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -449,6 +462,7 @@
    },
    "source": [
     "`numpy` has a module `linalg` for linear algebra, and the module provides a function called `solve` that can solve a system of linear equations. For the example in the lecture\n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "2 x_0 + 2 x_1 &= 1\\\\\n",
@@ -487,6 +501,7 @@
    },
    "source": [
     "As explained in the lecture, the arguments `A` and `b` are obtained from the matrix form of the system of linear equations:\n",
+    "\n",
     "$$\n",
     "\\underbrace{\n",
     "\\begin{bmatrix}\n",
@@ -566,6 +581,7 @@
    },
    "source": [
     "A unique solution does not exist if and only if the [determinant](https://en.m.wikipedia.org/wiki/Determinant) of $\\mathbf{A}$ is $0$, in which case $\\mathbf{A}$ is called a singular matrix. For a $2$-by-$2$ matrix, the determinant is defined as follows:\n",
+    "\n",
     "$$ \n",
     "\\begin{aligned}\n",
     "\\operatorname{det}(A) &:= \\left| \n",
@@ -588,6 +604,7 @@
    },
    "source": [
     "For example, the first system has a unique solution because\n",
+    "\n",
     "$$\n",
     "\\left|\n",
     "\\begin{matrix}\n",
@@ -598,6 +615,7 @@
     "= 2\\times 2 - 2\\times 0 = 4>0.\n",
     "$$\n",
     "The last two systems do not have unique solutions because\n",
+    "\n",
     "$$\n",
     "\\left|\n",
     "\\begin{matrix}\n",
@@ -637,6 +655,7 @@
    },
    "source": [
     "**Exercise** Use the `det` and `solve` functions to assign `x` to the `numpy` array storing the solution of the following linear system if the solution is unique else `None`.\n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "x_0 + 2 x_1 + 3x_2 &= 14\\\\\n",
@@ -730,6 +749,7 @@
    },
    "source": [
     "Suppose we want to solve:\n",
+    "\n",
     "$$\n",
     "f(x) = 0\n",
     "$$\n",
