--- a/Lecture1/Introduction to Computer Programming.ipynb
+++ b/Lecture1/Introduction to Computer Programming.ipynb
@@ -8,31 +8,22 @@
     }
    },
    "source": [
-    "# Introduction to Computer Programming\n",
-    "**CS1302 Introduction to Computer Programming**\n",
-    "___"
+    "# Introduction to Computer Programming"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-13T22:27:45.267725Z",
-     "start_time": "2020-09-13T22:27:45.205577Z"
+    "slideshow": {
+     "slide_type": "-"
     },
-    "hide_input": true,
-    "init_cell": true
+    "tags": [
+     "remove-cell"
+    ]
    },
-   "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
-    "%reload_ext mytutor"
+    "**CS1302 Introduction to Computer Programming**\n",
+    "___"
    ]
   },
   {
@@ -499,11 +490,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T12:08:18.318069Z",
-     "start_time": "2020-08-23T12:08:18.299005Z"
+     "end_time": "2020-11-27T05:14:52.762257Z",
+     "start_time": "2020-11-27T05:14:52.758268Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -771,7 +762,6 @@
      "end_time": "2020-08-23T12:30:45.988658Z",
      "start_time": "2020-08-23T12:30:45.980714Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -996,25 +986,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T12:39:13.621619Z",
-     "start_time": "2020-08-23T12:39:10.601381Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In which year did you join CityU? 2020\n",
-      "So you are a year 1 student.\n"
-     ]
+   "outputs": [],
+   "source": [
+    "# for step-by-step execution using mytutor\n",
+    "%reload_ext mytutor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-27T11:20:05.792756Z",
+     "start_time": "2020-11-27T11:20:05.786145Z"
     },
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1022,14 +1022,14 @@
        "        <iframe\n",
        "            width=\"1100\"\n",
        "            height=\"400\"\n",
-       "            src=\"https://e-quiz.cs.cityu.edu.hk/opt/cs1302visualize.html#mode=display&code=%22%22%22%0AThe%20program%20here%20reads%20the%20cohort%20and%20reports%20which%20year%20the%20user%20is%20in%20%0AAssumption%3A%20Input%20is%20integer%20no%20greater%20than%202020%0A%22%22%22%0Aimport%20datetime%20%20%23%20load%20a%20library%20to%20tell%20the%20current%20year%0Acohort%20%3D%20input%28%22In%20which%20year%20did%20you%20join%20CityU%3F%20%22%29%0Ayear%20%20%20%3D%20datetime.datetime.now%28%29.year%20-%20int%28cohort%29%20%2B%201%0Aprint%28%22So%20you%20are%20a%20year%22%2Cyear%2C%22student.%22%29%0A\"\n",
+       "            src=\"https://e-quiz.cs.cityu.edu.hk/opt/cs1302visualize.html#mode=display&code=%23%20The%20program%20here%20reads%20the%20cohort%20and%20reports%20which%20year%20the%20user%20is%20in%0A%23%20Assumption%3A%20Input%20is%20integer%20no%20greater%20than%202020%0Aimport%20datetime%20%20%23%20load%20a%20library%20to%20tell%20the%20current%20year%0Acohort%20%3D%20input%28%22In%20which%20year%20did%20you%20join%20CityU%3F%20%22%29%0Ayear%20%3D%20datetime.datetime.now%28%29.year%20-%20int%28cohort%29%20%2B%201%0Aprint%28%22So%20you%20are%20a%20year%22%2C%20year%2C%20%22student.%22%29%0A\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f131c3ffdd0>"
+       "<IPython.lib.display.IFrame at 0x7f07840de450>"
       ]
      },
      "metadata": {},
@@ -1164,29 +1164,10 @@
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/bTkXg2LZIMQ\" allowfullscreen></iframe>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## References\n",
-    "- Required readings:\n",
-    "    - [\\[Halterman17\\] 1.1-1.3](https://archive.org/stream/2018Fundamentals.ofPython?ref=ol#page/n11/mode/1up)\n",
-    "- Optional readings:\n",
-    "    -   [Architecture of the CPU](https://computersciencewiki.org/index.php/Architecture_of_the_central_processing_unit_(CPU))\n",
-    "    -   [Binary Numbers - 2's complement](https://en.wikipedia.org/wiki/Two%27s_complement)\n",
-    "    -   [Floating point numbers](https://floating-point-gui.de/formats/fp/)\n",
-    "    -   [Classification of programming languages](https://en.wikibooks.org/wiki/A-level_Computing/AQA/Paper_2/Fundamentals_of_computer_systems/Classification_of_programming_languages)\n",
-    "    -   [Python for beginners](https://www.python.org/about/gettingstarted/)"
-   ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Create Assignment",
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3.7",
    "language": "python",
@@ -1202,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
