--- a/Lecture2/Expressions and Arithmetic.ipynb
+++ b/Lecture2/Expressions and Arithmetic.ipynb
@@ -8,8 +8,20 @@
     }
    },
    "source": [
-    "# Expressions and Arithmetic\n",
-    "\n",
+    "# Expressions and Arithmetic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -363,7 +375,6 @@
      "end_time": "2020-09-12T02:41:21.545421Z",
      "start_time": "2020-09-12T02:41:21.484702Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -603,7 +614,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Create Assignment",
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3.7",
    "language": "python",
@@ -619,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
