--- a/Lecture3/Conditional Execution.ipynb
+++ b/Lecture3/Conditional Execution.ipynb
@@ -8,33 +8,42 @@
     }
    },
    "source": [
-    "# Conditional Execution\n",
-    "\n",
+    "# Conditional Execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T06:03:05.008319Z",
-     "start_time": "2020-10-06T06:03:04.942121Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "hide_input": true,
-    "init_cell": true
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
-    "%reload_ext mytutor\n",
-    "from ipywidgets import interact"
+    "%reload_ext mytutor"
    ]
   },
   {
@@ -362,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T06:09:39.976022Z",
-     "start_time": "2020-10-06T06:09:39.972862Z"
+     "end_time": "2020-09-12T05:54:39.873338Z",
+     "start_time": "2020-09-12T05:54:39.867318Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -376,17 +385,16 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#2.0 == 2>1 #equivalent to (2.0 ==2) and (2>1)\n",
-    "5!=6==5\n"
+    "2.0 == 2>1 #equivalent to (2.0 ==2) and (2>1)"
    ]
   },
   {
@@ -745,7 +753,6 @@
      "end_time": "2020-09-12T00:38:17.357180Z",
      "start_time": "2020-09-12T00:38:17.349848Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -775,7 +782,11 @@
    },
    "source": [
     "`abs` is a function that returns the absolute value of its argument. Hence, the above translates to\n",
-    "$$|x - y| \\leq \\delta_{\\text{abs}}$$ or equivalently $$y-\\delta_{\\text{abs}} \\leq x \\leq y+\\delta_{\\text{abs}} $$\n",
+    "\n",
+    "$$|x - y| \\leq \\delta_{\\text{abs}}$$ \n",
+    "or equivalently \n",
+    "\n",
+    "$$y-\\delta_{\\text{abs}} \\leq x \\leq y+\\delta_{\\text{abs}} $$\n",
     "where $\\delta_{\\text{abs}}$ is called the *absolute tolerance*. "
    ]
   },
@@ -809,7 +820,6 @@
      "end_time": "2020-09-12T00:41:15.078354Z",
      "start_time": "2020-09-12T00:41:15.071548Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -893,6 +903,7 @@
    },
    "source": [
     "`math.isclose(x,y)` implements\n",
+    "\n",
     "$$ |x - y| \\leq \\max\\{\\delta_{\\text{rel}} \\max\\{|x|,|y|\\},\\delta_{\\text{abs}}\\}$$\n",
     "with the default\n",
     "- *relative tolerance* $\\delta_{\\text{rel}}$ equal to `1e-9`, and\n",
@@ -1426,7 +1437,10 @@
     },
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1907,7 +1921,6 @@
      "end_time": "2020-09-12T01:56:37.522264Z",
      "start_time": "2020-09-12T01:56:37.509438Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
