--- a/Lecture6/More on Functions.ipynb
+++ b/Lecture6/More on Functions.ipynb
@@ -9,34 +9,41 @@
     }
    },
    "source": [
-    "# More on Functions\n",
+    "# More on Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-15T06:21:19.837576Z",
-     "start_time": "2020-11-15T06:21:19.796994Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "code_folding": [],
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
-     "slide_type": "skip"
-    }
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
     "%reload_ext mytutor"
    ]
   },
@@ -61,6 +68,7 @@
    },
    "source": [
     "Consider computing the [Fibonacci number](https://en.wikipedia.org/wiki/Fibonacci_number) of order $n$:\n",
+    "\n",
     "$$\n",
     "F_n := \n",
     "\\begin{cases}\n",
@@ -91,6 +99,7 @@
      "start_time": "2020-10-31T02:43:46.133048Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -163,6 +172,7 @@
    },
    "source": [
     "**Exercise** Write a function `gcd` that implements the [Euclidean algorithm for the greatest common divisor](https://en.wikipedia.org/wiki/Euclidean_algorithm): \n",
+    "\n",
     "$$\\operatorname{gcd}(a,b)=\\begin{cases}a & b=0\\\\ \\operatorname{gcd}(b, a\\operatorname{mod}b) & \\text{otherwise} \\end{cases}$$"
    ]
   },
@@ -413,6 +423,7 @@
      "end_time": "2020-10-31T02:43:47.626870Z",
      "start_time": "2020-10-31T02:43:47.619853Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -480,6 +491,7 @@
      "end_time": "2020-10-31T02:43:49.568032Z",
      "start_time": "2020-10-31T02:43:48.577448Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -512,6 +524,7 @@
      "end_time": "2020-10-31T02:43:50.313458Z",
      "start_time": "2020-10-31T02:43:49.569918Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -555,6 +568,7 @@
      "end_time": "2020-10-31T02:43:50.324561Z",
      "start_time": "2020-10-31T02:43:50.315516Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -721,6 +735,7 @@
      "start_time": "2020-10-31T02:43:50.705710Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -838,6 +853,7 @@
      "end_time": "2020-10-31T02:43:52.064075Z",
      "start_time": "2020-10-31T02:43:52.022388Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -920,6 +936,7 @@
      "start_time": "2020-10-31T02:43:53.262288Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -1046,6 +1063,7 @@
      "start_time": "2020-10-31T02:43:54.548561Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1129,6 +1147,7 @@
      "end_time": "2020-10-31T02:43:55.098142Z",
      "start_time": "2020-10-31T02:43:55.091975Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1192,6 +1211,7 @@
      "end_time": "2020-10-31T02:43:55.587635Z",
      "start_time": "2020-10-31T02:43:55.580308Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1258,6 +1278,7 @@
      "start_time": "2020-10-31T02:43:56.053130Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1427,6 +1448,7 @@
      "end_time": "2020-10-31T02:43:57.716343Z",
      "start_time": "2020-10-31T02:43:57.711570Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -1505,6 +1527,7 @@
      "start_time": "2020-10-31T02:43:58.216334Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1876,6 +1899,7 @@
      "end_time": "2020-10-31T02:44:00.927005Z",
      "start_time": "2020-10-31T02:44:00.921731Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2234,6 +2258,7 @@
      "end_time": "2020-10-31T02:44:03.368911Z",
      "start_time": "2020-10-31T02:44:03.348824Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2482,6 +2507,7 @@
      "start_time": "2020-10-31T02:44:05.056730Z"
     },
     "code_folding": [],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2660,6 +2686,7 @@
     "code_folding": [
      1
     ],
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2847,6 +2874,7 @@
      "end_time": "2020-10-31T02:44:08.641679Z",
      "start_time": "2020-10-31T02:44:08.632945Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2886,6 +2914,7 @@
      "end_time": "2020-10-31T02:44:08.660463Z",
      "start_time": "2020-10-31T02:44:08.643793Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
