--- a/Lecture9/Monte Carlo Simulation and Linear Algebra.ipynb
+++ b/Lecture9/Monte Carlo Simulation and Linear Algebra.ipynb
@@ -8,34 +8,42 @@
     }
    },
    "source": [
-    "# Monte Carlo Simulation and Linear Algebra\n",
-    "\n",
+    "# Monte Carlo Simulation and Linear Algebra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-17T05:14:01.979116Z",
-     "start_time": "2020-11-17T05:14:01.915676Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "hide_input": true,
-    "init_cell": true
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
-    "%reload_ext mytutor\n",
-    "import matplotlib.pyplot as pyplot\n",
-    "import ipywidgets as widgets"
+    "%reload_ext mytutor"
    ]
   },
   {
@@ -142,7 +150,8 @@
    },
    "source": [
     "The chance is the area of the circle divided by the area of the square. Suppose the square has length $\\ell$, then the chance is\n",
-    "  $$ \\frac{\\pi (\\ell /2)^2}{ (\\ell)^2 } = \\frac{\\pi}4 $$\n",
+    "\n",
+    "$$ \\frac{\\pi (\\ell /2)^2}{ (\\ell)^2 } = \\frac{\\pi}4 $$\n",
     "independent of the length $\\ell$."
    ]
   },
@@ -318,6 +327,7 @@
    },
    "source": [
     "Given the following linear equation in variable $x$ with real-valued coefficient $a$ and $b$,\n",
+    "\n",
     "$$ a x = b,$$\n",
     "what is the value of $x$ that satisfies the equation?"
    ]
@@ -402,12 +412,14 @@
    },
    "source": [
     "In the general case, we have a system of $m$ linear equations and $n$ variables:\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "a_{00} x_0 + a_{01} x_1 + \\dots + a_{0(n-1)} x_{n-1} &= b_0\\\\\n",
     "a_{10} x_0 + a_{11} x_1 + \\dots + a_{1(n-1)} x_{n-1} &= b_1\\\\\n",
     "\\vdots\\kern2em &= \\vdots\\\\\n",
     "a_{(m-1)0} x_0 + a_{(m-1)1} x_1 + \\dots + a_{(m-1)(n-1)} x_{n-1} &= b_{m-1}\\\\\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "where\n",
     "- $x_j$ for $j\\in \\{0,\\dots,n-1\\}$ are the variables, and\n",
     "- $a_{ij}$ and $b_j$ for $i\\in \\{0,\\dots,m-1\\}$ and $j\\in \\{0,\\dots,n-1\\}$ are the coefficients.\n",
@@ -424,10 +436,12 @@
    },
    "source": [
     "We will consider the simpler 2-by-2 system with 2 variables and 2 equations:\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "a_{00} x_0 + a_{01} x_1 &= b_0\\\\\n",
     "a_{10} x_0 + a_{11} x_1 &= b_1.\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -439,12 +453,15 @@
    },
    "source": [
     "To get an idea of the solution, suppose \n",
+    "\n",
     "$$a_{00}=a_{11}=1, a_{01} = a_{10} = 0.$$\n",
     "The system of equations become\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "x_0 \\hphantom{+ x_1} &= b_0\\\\\n",
     "\\hphantom{x_0 +}  x_1 &= b_1,\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "which gives the solution directly."
    ]
   },
@@ -457,6 +474,7 @@
    },
    "source": [
     "What about $a_{00}=a_{11}=2$ instead?\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "2x_0 \\hphantom{+ x_1} &= b_0\\\\\n",
     "\\hphantom{2x_0 +}  2x_1 &= b_1,\n",
@@ -472,10 +490,12 @@
    },
    "source": [
     "To obtain the solution, we simply divide both equations by 2:\n",
-    "  $$ \\begin{aligned}\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
     "x_0 \\hphantom{+ x_1} &= \\frac{b_0}2\\\\\n",
     "\\hphantom{x_0 +}  x_1 &= \\frac{b_1}2.\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -487,10 +507,12 @@
    },
    "source": [
     "What if $a_{01}=2$ instead?\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "2x_0 + 2x_1 &= b_0\\\\\n",
     "\\hphantom{2x_0 +}  2x_1 &= b_1\\\\\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -503,15 +525,19 @@
    "source": [
     "The second equation gives the solution of $x_1$, and we can use the solution in the first equation to solve for $x_0$. More precisely:\n",
     "- Subtract the second equation from the first one:\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "2x_0 \\hphantom{+2x_1} &= b_0 - b_1\\\\\n",
     "\\hphantom{2x_0 +}  2x_1 &= b_1\\\\\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "- Divide both equation by 2:\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "x_0 \\hphantom{+ x_1} &= \\frac{b_0 - b_1}2\\\\\n",
     "\\hphantom{x_0 +}  x_1 &= \\frac{b_1}2\\\\\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -570,12 +596,15 @@
    },
    "source": [
     "In linear algebra, a system of equations such as\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "a_{00} x_0 + a_{01} x_1 &= b_0\\\\\n",
     "a_{10} x_0 + a_{11} x_1 &= b_1\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "is written concisely in *matrix* form as $ \\mathbf{A} \\mathbf{x} = \\mathbf{b} $:\n",
-    "$$ \\overbrace{\\begin{bmatrix}\n",
+    "\n",
+    "$$\\overbrace{\\begin{bmatrix}\n",
     "a_{00} & a_{01}\\\\\n",
     "a_{10} & a_{11}\n",
     "\\end{bmatrix}}^{\\mathbf{A}}\n",
@@ -592,10 +621,12 @@
     "$$\n",
     "where\n",
     "$ \\mathbf{A} \\mathbf{x}$ is the *matrix multiplication*\n",
+    "\n",
     "$$ \\mathbf{A} \\mathbf{x} = \\begin{bmatrix}\n",
     "a_{00} x_0 + a_{01} x_1\\\\\n",
     "a_{10} x_0 + a_{11} x_1\n",
-    "\\end{bmatrix}.$$\n"
+    "\\end{bmatrix}.\n",
+    "$$"
    ]
   },
   {
@@ -706,7 +737,6 @@
      "end_time": "2020-11-17T05:05:08.277037Z",
      "start_time": "2020-11-17T05:05:08.259940Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1412,7 +1442,6 @@
      "end_time": "2020-11-17T05:05:09.225964Z",
      "start_time": "2020-11-17T05:05:09.214048Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1547,7 +1576,10 @@
     },
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1622,10 +1654,12 @@
    },
    "source": [
     "Before solving the system of linear equations, let us try to verify a solution to the equations:\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "2x_0 + 2x_1 &= 1\\\\\n",
     "\\hphantom{2x_0 +}  2x_1 &= 1\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -1735,6 +1769,7 @@
    },
    "source": [
     "We will operate on an augmented matrix of the coefficients:\n",
+    "\n",
     "$$ \\begin{aligned} \\mathbf{C} &= \\begin{bmatrix}\n",
     "\\mathbf{A} & \\mathbf{b}\n",
     "\\end{bmatrix}\\\\\n",
@@ -1924,7 +1959,6 @@
      "end_time": "2020-11-13T06:01:49.982673Z",
      "start_time": "2020-11-13T06:01:49.969793Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2132,6 +2166,7 @@
    },
    "source": [
     "This gives the desired solution $x_0=0$ and $x_1=0.5$ for\n",
+    "\n",
     "$$ \\begin{aligned}\n",
     "2x_0 + 2x_1 &= 1\\\\\n",
     "\\hphantom{2x_0 +}  2x_1 &= 1\\\\\n",
