--- a/Lab3a/Improved Quadratic Equation Solver.ipynb
+++ b/Lab3a/Improved Quadratic Equation Solver.ipynb
@@ -8,7 +8,20 @@
     }
    },
    "source": [
-    "# Improved Quadratic Equation Solver\n",
+    "# Improved Quadratic Equation Solver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
@@ -31,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:19.981776Z",
-     "start_time": "2020-09-22T05:38:19.897995Z"
+     "end_time": "2020-09-30T07:13:52.446186Z",
+     "start_time": "2020-09-30T07:13:52.388694Z"
     },
     "slideshow": {
      "slide_type": "skip"
@@ -68,9 +81,15 @@
    },
    "source": [
     "Recall that the quadratic equation is\n",
-    "$$ax^2+bx+c=0$$\n",
+    "\n",
+    "$$\n",
+    "ax^2+bx+c=0\n",
+    "$$\n",
     "where $a$, $b$, and $c$ are real-valued coefficients, and $x$ is the unknown variable. The roots are normally given by\n",
-    "$$\\frac{-b-\\sqrt{b^2-4ac}}{2a}, \\frac{-b+\\sqrt{b^2-4ac}}{2a}.$$"
+    "\n",
+    "$$\n",
+    "\\frac{-b-\\sqrt{b^2-4ac}}{2a}, \\frac{-b+\\sqrt{b^2-4ac}}{2a}.\n",
+    "$$"
    ]
   },
   {
@@ -92,7 +111,7 @@
     }
    },
    "source": [
-    "**Exercise** Assign to `roots` only one root when the discriminant is zero. E.g., if $(a,b,c)=(1,-2,1)$, then `roots` should be assigned the value `1.0` instead of `1.0, 1.0`."
+    "**Exercise** Assign to `roots` only one root when the discriminant is zero. E.g., if $(a,b,c)=(1,-2,1)$, then `roots` should be assigned the value `1.0` instead of `1.0, 1.0`. If there are two roots, give them in the order of the above formula."
    ]
   },
   {
@@ -125,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:19.992947Z",
-     "start_time": "2020-09-22T05:38:19.985698Z"
+     "end_time": "2020-09-30T07:13:54.943039Z",
+     "start_time": "2020-09-30T07:13:54.938479Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -151,29 +170,27 @@
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c    # discriminant\n",
     "    if math.isclose(d, 0):\n",
-    "        roots = -b / 2 / a\n",
-    "    else:\n",
-    "        d **= 0.5\n",
-    "        root1 = (-b + d)/2/a\n",
-    "        root2 = (-b-d)/2/a\n",
-    "        roots = root1, root2\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.004507Z",
-     "start_time": "2020-09-22T05:38:19.996991Z"
+     "end_time": "2020-09-30T07:13:55.344046Z",
+     "start_time": "2020-09-30T07:13:55.331474Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     0
+    ],
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "602a405a080268df323802cb1444731b",
+     "checksum": "5552d9f5d7b0e36e7e1f1404c894644e",
      "grade": true,
      "grade_id": "test-zero_determinant",
      "locked": true,
@@ -200,7 +217,7 @@
     "        print(f'With (a, b, c)={a,b,c}, roots should be {roots} not {roots_}.')\n",
     "    assert correct\n",
     "\n",
-    "test_get_roots((-0.0, -1.0), 1, 1, 0)\n",
+    "test_get_roots((-1.0, 0.0), 1, 1, 0)\n",
     "test_get_roots(0.0, 1, 0, 0)"
    ]
   },
@@ -235,7 +252,7 @@
     }
    },
    "source": [
-    "Precise issue"
+    "YOUR ANSWER HERE"
    ]
   },
   {
@@ -258,7 +275,10 @@
    },
    "source": [
     "If $a=0$, the earlier formula for the roots are invalid due to division by zero. Nevertheless, the equation remains valid:\n",
-    "$$bx + c=0.$$"
+    "\n",
+    "$$\n",
+    "bx + c=0.\n",
+    "$$"
    ]
   },
   {
@@ -289,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.021922Z",
-     "start_time": "2020-09-22T05:38:20.015551Z"
+     "end_time": "2020-09-30T07:16:42.747865Z",
+     "start_time": "2020-09-30T07:16:42.739888Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -312,34 +332,24 @@
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c\n",
     "    # YOUR CODE HERE\n",
-    "    if a == 0:\n",
-    "        roots = -c / b\n",
-    "    elif math.isclose(d, 0):\n",
-    "        roots = -b / 2 / a\n",
-    "    else:\n",
-    "        d **= 0.5\n",
-    "        root1 = (-b + d)/2/a\n",
-    "        root2 = (-b-d)/2/a\n",
-    "        roots = root1, root2\n",
+    "    raise NotImplementedError()\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.033892Z",
-     "start_time": "2020-09-22T05:38:20.025559Z"
+     "end_time": "2020-09-30T07:16:43.336666Z",
+     "start_time": "2020-09-30T07:16:43.323048Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e09baa85f21ecc06e8cf6f85bad6cf25",
+     "checksum": "47f6be09ce133d9baa3d28a34873e52c",
      "grade": true,
      "grade_id": "test-linear",
      "locked": true,
@@ -367,7 +377,7 @@
     "    assert correct\n",
     "\n",
     "\n",
-    "test_get_roots((-0.0, -1.0), 1, 1, 0)\n",
+    "test_get_roots((-1.0, -0.0), 1, 1, 0)\n",
     "test_get_roots(0.0, 1, 0, 0)\n",
     "test_get_roots(0.5, 0, -2, 1)"
    ]
@@ -384,7 +394,10 @@
    "metadata": {},
    "source": [
     "What if $a=b=0$? In that case, the equation becomes\n",
-    "$$c = 0$$\n",
+    "\n",
+    "$$\n",
+    "c = 0\n",
+    "$$\n",
     "which is always satisfied if $c=0$, but never satisfied if $c\\neq 0$. "
    ]
   },
@@ -435,11 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.056806Z",
-     "start_time": "2020-09-22T05:38:20.051243Z"
+     "end_time": "2020-09-30T07:17:00.087417Z",
+     "start_time": "2020-09-30T07:17:00.077212Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -460,25 +473,18 @@
    "source": [
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c\n",
-    "    if a == 0:\n",
-    "        roots = -c / b\n",
-    "    elif math.isclose(d, 0):\n",
-    "        roots = -b / 2 / a\n",
-    "    else:\n",
-    "        d **= 0.5\n",
-    "        root1 = (-b + d)/2/a\n",
-    "        root2 = (-b-d)/2/a\n",
-    "        roots = root1, root2\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.134667Z",
-     "start_time": "2020-09-22T05:38:20.060220Z"
+     "end_time": "2020-09-30T07:17:23.281883Z",
+     "start_time": "2020-09-30T07:17:23.268054Z"
     },
     "code_folding": [
      0
@@ -487,7 +493,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "df83f166ba5d2a6e590b2f6e1cc82ee7",
+     "checksum": "86a68b255e7148cc7a610bbd93f61ecc",
      "grade": true,
      "grade_id": "test_degenerate",
      "locked": true,
@@ -500,21 +506,7 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ae3aacb27799>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-ae3aacb27799>\u001b[0m in \u001b[0;36mtest_get_roots\u001b[0;34m(roots, a, b, c)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroots\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mroots_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mroots\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mcorrect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroots_\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-19f6d730d944>\u001b[0m in \u001b[0;36mget_roots\u001b[0;34m(a, b, c)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mroots\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tests\n",
     "def test_get_roots(roots, a, b, c):\n",
@@ -532,7 +524,7 @@
     "    assert correct\n",
     "\n",
     "\n",
-    "test_get_roots((-0.0, -1.0), 1, 1, 0)\n",
+    "test_get_roots((-1.0, 0.0), 1, 1, 0)\n",
     "test_get_roots(0.0, 1, 0, 0)\n",
     "test_get_roots((-float('inf'), float('inf')), 0, 0, 0)\n",
     "test_get_roots(None, 0, 0, 1)\n",
@@ -556,46 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-28T09:29:23.169558Z",
-     "start_time": "2020-09-28T09:29:23.109723Z"
+     "end_time": "2020-09-30T07:17:34.287625Z",
+     "start_time": "2020-09-30T07:17:34.242675Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     0
+    ],
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8273b64e3165404bbe876de8be5d76e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='a', max=10, min=-10), IntSlider(value=2, description='b'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# quadratic equations solver\n",
     "@interact(a=(-10,10,1),b=(-10,10,1),c=(-10,10,1))\n",
     "def quadratic_equation_solver(a=1,b=2,c=1):\n",
     "    print('Root(s):',get_roots(a,b,c))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -614,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
