--- a/Lecture4/Using Functions.ipynb
+++ b/Lecture4/Using Functions.ipynb
@@ -8,36 +8,42 @@
     }
    },
    "source": [
-    "# Using Functions\n",
-    "\n",
+    "# Using Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-01T08:05:33.602886Z",
-     "start_time": "2020-11-01T08:05:33.533494Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "hide_input": true,
-    "init_cell": true,
     "slideshow": {
-     "slide_type": "skip"
-    }
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
-    "%reload_ext mytutor\n",
-    "from ipywidgets import interact"
+    "%reload_ext mytutor"
    ]
   },
   {
@@ -237,7 +243,10 @@
     "scrolled": true,
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -321,7 +330,10 @@
     },
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1018,7 +1030,11 @@
     "scrolled": true,
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "output_scroll",
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1634,7 +1650,11 @@
      "end_time": "2020-09-26T10:52:13.621351Z",
      "start_time": "2020-09-26T10:52:13.615592Z"
     },
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "output_scroll",
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1767,7 +1787,11 @@
     "scrolled": true,
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "output_scroll",
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -1959,7 +1983,11 @@
     },
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "output_scroll",
+     "remove-output"
+    ]
    },
    "outputs": [
     {
