--- a/Lecture4/Writing Functions.ipynb
+++ b/Lecture4/Writing Functions.ipynb
@@ -8,35 +8,42 @@
     }
    },
    "source": [
-    "# Writing Function\n",
-    "\n",
+    "# Writing Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T11:02:49.139629Z",
-     "start_time": "2020-09-26T11:02:49.033100Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "hide_input": true,
     "slideshow": {
-     "slide_type": "skip"
-    }
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
-    "%reload_ext mytutor\n",
-    "from ipywidgets import interact"
+    "%reload_ext mytutor"
    ]
   },
   {
@@ -527,7 +534,10 @@
     },
     "slideshow": {
      "slide_type": "-"
-    }
+    },
+    "tags": [
+     "remove-output"
+    ]
    },
    "outputs": [
     {
@@ -641,7 +651,6 @@
      "end_time": "2020-09-26T11:03:15.848468Z",
      "start_time": "2020-09-26T11:03:15.843151Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -713,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
