--- a/Lecture5/Objects.ipynb
+++ b/Lecture5/Objects.ipynb
@@ -9,35 +9,41 @@
     }
    },
    "source": [
-    "# Objects\n",
+    "# Objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-01T08:04:11.865479Z",
-     "start_time": "2020-11-01T08:04:11.817146Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "code_folding": [],
-    "hide_input": true,
-    "init_cell": true,
-    "scrolled": true,
     "slideshow": {
-     "slide_type": "skip"
-    }
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
     "%reload_ext mytutor"
    ]
   },
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-09T11:51:14.715923Z",
@@ -83,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-09T11:51:21.937292Z",
@@ -95,26 +101,11 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <video\n",
-       "      width=\"854\"\n",
-       "      height=\"480\"\n",
-       "      autoplay=\"autoplay\"\n",
-       "      controls\n",
-       "    >\n",
-       "        <source src=\"media/videos/tmp_g2m41rl/480p15/HelloWorld.mp4\" type=\"video/mp4\">\n",
-       "    </video>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "UsageError: Cell magic `%%manim` not found.\n"
+     ]
     }
    ],
    "source": [
@@ -594,16 +585,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name, email, phone\r\n",
-      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\r\n",
-      "Alta Perez,bos@fiur.sc,(385) 247-9001\r\n",
-      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\r\n",
-      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\r\n",
-      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\r\n",
-      "Clayton Atkins,vape@nig.eh,(762) 271-7090\r\n",
-      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\r\n",
-      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\r\n",
-      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\r\n"
+      "name, email, phone\n",
+      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\n",
+      "Alta Perez,bos@fiur.sc,(385) 247-9001\n",
+      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\n",
+      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\n",
+      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\n",
+      "Clayton Atkins,vape@nig.eh,(762) 271-7090\n",
+      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\n",
+      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\n",
+      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\n"
      ]
     }
    ],
@@ -716,7 +707,6 @@
      "end_time": "2020-09-27T14:34:53.564370Z",
      "start_time": "2020-09-27T14:34:53.556338Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1025,7 +1015,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "contact.csv  media  Objects.ipynb  private\r\n"
+      "contact.csv  media  Objects.ipynb  private\n"
      ]
     }
    ],
@@ -1082,16 +1072,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name, email, phone\r\n",
-      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\r\n",
-      "Alta Perez,bos@fiur.sc,(385) 247-9001\r\n",
-      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\r\n",
-      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\r\n",
-      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\r\n",
-      "Clayton Atkins,vape@nig.eh,(762) 271-7090\r\n",
-      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\r\n",
-      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\r\n",
-      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\r\n"
+      "name, email, phone\n",
+      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\n",
+      "Alta Perez,bos@fiur.sc,(385) 247-9001\n",
+      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\n",
+      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\n",
+      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\n",
+      "Clayton Atkins,vape@nig.eh,(762) 271-7090\n",
+      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\n",
+      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\n",
+      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\n"
      ]
     }
    ],
@@ -1149,18 +1139,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name, email, phone\r\n",
-      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\r\n",
-      "Alta Perez,bos@fiur.sc,(385) 247-9001\r\n",
-      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\r\n",
-      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\r\n",
-      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\r\n",
-      "Clayton Atkins,vape@nig.eh,(762) 271-7090\r\n",
-      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\r\n",
-      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\r\n",
-      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\r\n",
-      "Effie, Douglas,galnec@naowdu.tc, (888) 311-9512\r\n",
-      "Effie, Douglas,galnec@naowdu.tc, (888) 311-9512\r\n"
+      "name, email, phone\n",
+      "Amelia Hawkins,dugorre@lufu.cg,(414) 524-6465\n",
+      "Alta Perez,bos@fiur.sc,(385) 247-9001\n",
+      "Tai Ming Chan,tmchan@cityu.edu.hk,(634) 234-7294\n",
+      "Annie Zimmerman,okodag@saswuf.mn,(259) 862-1082\n",
+      "Eula Crawford,ve@rorohte.mx,(635) 827-9819\n",
+      "Clayton Atkins,vape@nig.eh,(762) 271-7090\n",
+      "Hallie Day,kozzazazi@ozakewje.am,(872) 949-5878\n",
+      "Lida Matthews,joobu@pabnesis.kg,(213) 486-8330\n",
+      "Amelia Pittman,nulif@uposzag.au,(800) 303-3234\n",
+      "Effie, Douglas,galnec@naowdu.tc, (888) 311-9512\n",
+      "Effie, Douglas,galnec@naowdu.tc, (888) 311-9512\n"
      ]
     }
    ],
@@ -1660,7 +1650,6 @@
      "end_time": "2020-10-09T12:09:16.114595Z",
      "start_time": "2020-10-09T12:09:16.107719Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1949,7 +1938,7 @@
      "end_time": "2020-10-09T12:22:18.902068Z",
      "start_time": "2020-10-09T12:22:18.885736Z"
     },
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2144,7 +2133,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3.7",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2158,7 +2147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -2202,7 +2191,7 @@
     "width": "182.844px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
