--- a/Lecture7/Lists and Tuples.ipynb
+++ b/Lecture7/Lists and Tuples.ipynb
@@ -8,31 +8,41 @@
     }
    },
    "source": [
-    "# Lists and Tuples\n",
-    "\n",
+    "# Lists and Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "source": [
     "**CS1302 Introduction to Computer Programming**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-07T01:40:47.002952Z",
-     "start_time": "2020-11-07T01:40:46.964423Z"
+     "end_time": "2020-11-27T11:20:04.656873Z",
+     "start_time": "2020-11-27T11:20:04.651575Z"
     },
-    "hide_input": true,
-    "init_cell": true
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "# set up environment\n",
-    "%reset -f\n",
-    "import sys\n",
-    "cs1302_site_packages = '/home/course/cs1302/site-packages'\n",
-    "if cs1302_site_packages not in sys.path:\n",
-    "    sys.path.append(cs1302_site_packages)\n",
     "%reload_ext mytutor"
    ]
   },
@@ -369,7 +379,6 @@
      "end_time": "2020-11-02T23:29:55.099284Z",
      "start_time": "2020-11-02T23:29:55.092488Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1738,7 +1747,6 @@
      "end_time": "2020-11-03T00:14:46.076040Z",
      "start_time": "2020-11-03T00:14:46.068986Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2192,7 +2200,6 @@
      "end_time": "2020-11-03T00:22:55.864740Z",
      "start_time": "2020-11-03T00:22:55.852504Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2247,7 +2254,6 @@
      "end_time": "2020-11-03T00:23:31.853407Z",
      "start_time": "2020-11-03T00:23:31.849634Z"
     },
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
